2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (search_by_expression): Don't set the
	summary. Search will pick it automatically.

2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-summary.c: Read href from db properly.

2008-07-30  Milan Crha  <mcrha@redhat.com>
	** Fix for bug #500389

	* camel/camel-exchange-provider.c: (auth_types),
	(exchange_conf_entries), (camel_provider_module_init):
	Option to set different authentication type for GAL and OWA.
	* storage/exchange-autoconfig-wizard.c: (gc_page_next):
	Use default (NTLM, if failed then Plaintext) authentication here.

2008-07-25  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #544031

	* camel/camel-exchange-summary.c: (message_info_to_db):
	* mail/mail-stub-listener.h: (struct _MailStubListener):
	* storage/exchange-component.c: (new_connection):
	* calendar/e-cal-backend-exchange.c: (build_msg):
	* calendar/e-cal-backend-exchange-calendar.c: (send_objects):
	Compiler warnings cleanup.

2008-07-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #544513

	* storage/exchange-component.c: (new_connection):
	Do not unref NULL object.

2008-07-24  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #208394 (bnc)
	* calendar/e-cal-backend-exchange.h: Include rid to check if the event
	is in the cache.
	* calendar/e-cal-backend-exchange-calendar.c: (get_changed_events):
	Use the new function, find_instance to search for the instance
	(open_calendar): 
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks),
	(create_task_object):
	* calendar/e-cal-backend-exchange.c: (find_instance),
	(e_cal_backend_exchange_in_cache): Use rid along with uid while
	searching for recurring instances.					   

2008-07-23  Johnny Jacob  <jjohnny@novell.com>

	* NEWS: 2.23.5 release updates.

	* configure.in: Version bump to 2.23.6
	
2008-07-22  Bharath Acharya  <abharath@novell.com>

	** Fixes part of bug #544115
